# QT_Cpp

QxORM_cpp/Postgres_AUTOINCR/: author.cpp  author.h  blog.cpp  category.cpp  comment.cpp  main.cpp  testData.pro
TCP_IP_Serv/: Bal12_Aik.h  TCP_IP_Serv.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
mlp_opencv_cpp/1_training/mlp_OpenCV/: CMakeLists.txt  main.cpp
mlp_opencv_cpp/2_testing_trained/testing_mnist_opencv/: CMakeLists.txt  main.cpp
mlp_opencv_cpp/3_opencv_webcam/: main.cpp  opencv_webcam.pro
mlp_opencv_tesseract/Two_rows_detection/: CMakeLists.txt  main.cpp
visa/Prj_VISA/: AutoTestKPA.pro  Bal_Cs.cpp  Bal_Cs.h  loghelper.cpp  loghelper.h  main.cpp  mainatkpa.cpp  mainatkpa.h  mainatkpa.ui  sportclass.cpp  sportclass.h  sportpower.cpp  sportpower.h  wdmtmkv2.cpp
visa/QT_Visa/: Visa.pro  mainwindow.cpp
yolo_cpp/YOLO_IMAGE/YOLOv8-CPP-Inference/: main.cpp
yolo_cpp/YOLO_VIDEO/YOLOv8-CPP-Inference/: CMakeLists.txt  main.cpp
